change String Name
change the chinese string to english string

Signed-off-by: Clay Zhu (朱咸刚) <clay.zhu@spreadtrum.com>

--- a/smartRepeater/app/src/main/res/layout/view_actionsheet.xml
+++ b/smartRepeater/app/src/main/res/layout/view_actionsheet.xml
@@ -39,7 +39,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="取消"
+        android:text="cancel"
         android:textSize="18sp"
         android:textStyle="bold" />
 
