update repeater app for zhang forks branch.

--- a/smartRepeater/app/src/main/res/layout/fragment_wi_fi_manager.xml
+++ b/smartRepeater/app/src/main/res/layout/fragment_wi_fi_manager.xml
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1"
-                    android:hint="WiFi SSID"
+                    android:hint="SSID"
                     android:paddingLeft="20dp" />
 
                 <Spinner
@@ -150,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1"
-                    android:hint="WiFi PASSWORD"
+                    android:hint="PASSWORD"
                     android:paddingLeft="20dp" />
 
                 <Button
