--- a/app/src/main/res/layout/fragment_wi_fi_manager.xml
+++ b/app/src/main/res/layout/fragment_wi_fi_manager.xml
@@ -209,7 +209,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="AP MAC: xx:xx:xx:xx:xx:xx" />
+                    android:text="AP BSSID: xx:xx:xx:xx:xx:xx" />
 
                 <EditText
                     android:id="@+id/ap_mac"
