--- a/app/src/main/res/layout/fragment_wi_fi_manager.xml
+++ b/app/src/main/res/layout/fragment_wi_fi_manager.xml
@@ -272,12 +272,27 @@
                     android:gravity="center"
                     android:text="AP STATE: --" />
 
-                <TextView
-                    android:id="@+id/wifi_ap_address"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="AP BSSID: xx:xx:xx:xx:xx:xx" />
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/wifi_ap_sectype"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="0dp"
+                        android:text=""
+                        android:textSize="12sp"/>
+
+                    <TextView
+                        android:id="@+id/wifi_ap_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="AP BSSID: xx:xx:xx:xx:xx:xx" />
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/ap_mac"
