--- a/app/src/main/res/layout/fragment_wi_fi_manager.xml
+++ b/app/src/main/res/layout/fragment_wi_fi_manager.xml
@@ -355,6 +355,7 @@
                         android:textSize="12sp"/>
 
                     <Button
+                        android:id="@+id/block_all_sta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -400,6 +401,7 @@
                         android:textSize="12sp"/>
 
                     <Button
+                        android:id="@+id/unblock_all_sta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center"
